Closed Bug 621532 Opened 15 years ago Closed 15 years ago

Nuke nsIURLWidget and any consumers

Categories

(SeaMonkey :: General, defect)

x86
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
seamonkey2.1b2

People

(Reporter: philip.chee, Assigned: ewong)

References

Details

(Whiteboard: [useless code])

Attachments

(1 file, 2 obsolete files)

Bug 36658 - [FEATURE][MEDIAMETRIX] Win32: need to enable MediaMetrix to count Mozilla usage This Netscape era bug allows Media Metrix (now apparently part of ComScore) to track usage of the old Netscape 6 suite users and we appear to have carried this code forward until 2.1b2pre. Firefox doesn't appear to have this code and Netscape died long ago so I don't see any reason to support this if Firefox doesn't. I propose to rm with extreme prejudice all the code associated with this STAT. This MXR query should identify the relevant files/lines to remove: http://mxr.mozilla.org/comm-central/search?string=urlwidget
Assignee: nobody → ewong
Status: NEW → ASSIGNED
Attachment #502465 - Flags: review?
Attachment #502465 - Flags: review? → review?(philip.chee)
Attachment #502465 - Flags: review?(philip.chee) → feedback?(philip.chee)
Comment on attachment 502465 [details] [diff] [review] Remove nsIURLWidget and its consumers. These are the only remaining source files in suite/browser/public and suite/browser/src so we can remove these directories completely.
Comment on attachment 502465 [details] [diff] [review] Remove nsIURLWidget and its consumers. feedback- because of this build error: > make[5]: Entering directory `/c/t1/hg/objdir-sm/suite/build' > nsSuiteModule.cpp > make[5]: *** No rule to make target `../browser/src/suitebrowser_s.lib', needed by `suite.dll'. Stop. You'll need at least the following and also need to do a make -f client.mk configure. > +++ b/suite/browser/Makefile.in > @@ -37,20 +37,16 @@ > > DEPTH = ../.. > topsrcdir = @top_srcdir@ > srcdir = @srcdir@ > VPATH = @srcdir@ > > include $(DEPTH)/config/autoconf.mk > > -ifeq ($(OS_ARCH),WINNT) > -PARALLEL_DIRS = public src > -endif > - > +++ b/suite/build/Makefile.in > @@ -71,21 +71,16 @@ LOCAL_INCLUDES += \ > $(NULL) > > SHARED_LIBRARY_LIBS = \ > ../profile/$(LIB_PREFIX)suiteprofile_s.$(LIB_SUFFIX) \ > ../profile/migration/src/$(LIB_PREFIX)suitemigration_s.$(LIB_SUFFIX) \ > ../feeds/src/$(LIB_PREFIX)suitefeeds_s.$(LIB_SUFFIX) \ > $(NULL) > > -ifeq ($(OS_ARCH),WINNT) > -LOCAL_INCLUDES += -I$(topsrcdir)/suite/browser/src > -SHARED_LIBRARY_LIBS += ../browser/src/$(LIB_PREFIX)suitebrowser_s.$(LIB_SUFFIX) > -endif > - > diff --git a/suite/makefiles.sh b/suite/makefiles.sh > --- a/suite/makefiles.sh > +++ b/suite/makefiles.sh > @@ -35,18 +35,16 @@ > # > # ***** END LICENSE BLOCK ***** > > if [ "$COMM_BUILD" ]; then > add_makefiles " > suite/Makefile > suite/app/Makefile > suite/browser/Makefile > - suite/browser/public/Makefile > - suite/browser/src/Makefile
Attachment #502465 - Flags: feedback?(philip.chee) → feedback-
Attached patch Something like this (obsolete) — Splinter Review
This modified patch works for me.
Attachment #502698 - Flags: review?(neil)
Attachment #502698 - Flags: ui-review?(neil)
Attachment #502698 - Flags: review?(neil)
Attachment #502698 - Flags: review+
Er, there's no UI to review is there?
Attachment #502698 - Flags: ui-review?(neil)
Attachment #502698 - Flags: review?(neil)
Attachment #502698 - Flags: review+
Attachment #502698 - Flags: review?(neil) → review+
Keywords: checkin-needed
Attachment #502509 - Attachment description: Something like this. → Something like this [Same as next patch]
Attachment #502509 - Attachment is obsolete: true
Comment on attachment 502698 [details] [diff] [review] Remove nsIURLWidget and any consumers [Checked in: Comment 7] http://hg.mozilla.org/comm-central/rev/b0bc5138c616
Attachment #502698 - Attachment description: Remove nsIURLWidget and any consumers. → Remove nsIURLWidget and any consumers [Checked in: Comment 7]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → seamonkey2.1b2
Attachment #502509 - Attachment description: Something like this [Same as next patch] → Something like this
Attachment #502509 - Attachment is obsolete: false
Depends on: 634439
Attachment #502509 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: