Bug 621532 - Remove nsIURLWidget and any consumers. r=neil.